--- a/templates/home.html
+++ b/templates/home.html
@@ -101,9 +101,9 @@
               <p><img src="{{ TodaysAvalancheReport.avalanche_danger_image_url }}" /></p>
             {% endif %}             
              {% if TodaysAvalancheReport.avalanche_report_paragraph %}
-                <p>{{ TodaysAvalancheReport.avalanche_report_paragraph }}</p>
+                <p>{{ TodaysAvalancheReport.avalanche_report_paragraph }}  Please see <a href="http://www.sierraavalanchecenter.org/advisory" target="_blank">Sierra Avalanche website</a> for more details.</p>
             {% else %}
-              <p>No new avalanche report today.  Please see <a href="http://www.sierraavalanchecenter.org/advisory.php" target="_blank">Sierra Avalanche website</a> for more details.</p>
+              <p>No new avalanche report today.  Please see <a href="http://www.sierraavalanchecenter.org/advisory" target="_blank">Sierra Avalanche website</a> for more details.</p>
             {% endif %}
         <br />
       </div>
