--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
     <h1><a href="/home">Mountain Metrics</a></h1>
     
     <ul class="categories">
-      <li><a href="/home">Basic</a></li>
-      <li><a href="/home">Advanced</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/home">Metrics</a></li>
       <li><a href="/home"</a>&nbsp;</li>
     </ul>
     
